# frooky

./: .gitignore  .gitmodules  .markdownlint.json  .output.json.swp  MANIFEST.in  README.md  biome.json  build_backend.py  compileAgent.sh  pyproject.toml
.github/: copilot-instructions.md
.github/maestro/: warmup-android.yaml  warmup-ios.yaml
.github/scripts/: create-job-summary.sh  evaluate-results.sh  prepare-artifacts.sh
.github/workflows/: build-agent.yml  build-android-test-app.yml  build-app-android.yml  build-app-ios.yml  build-frooky-agent.yml  build-frooky-host.yml  build-host.yml  build-mas-app-android.yml  build-mas-app-ios.yml  build-test-app-android.yml  build.yml  publish-host.yml  publish.yml  sync-labels.yml  temp-workflog.yml  test-agent-android.yml  test-agent-ios.yml  test-android-agent.yml  test-android-runtime.yml  test-build.yml  test-frooky-agent-android.yml  test-frooky-agent-ios.yml  test-frooky-agent.yml  test-frooky-host.yml  test-host-android-.yml  test-host-android.yml  test-host-integration-android.yml  test-host-integration-ios.yml  test-host-integration.yml  test-host-ios.yml  test-host-unit.yml  test-ios-agent.yml  test-ios-runtime.yml  test-python.yml  test.yml  verify-host.yml
api/: README.md  frooky-config.schema.json  frooky.schema.json  generateDoc.sh
docs/: _outdated_usage.md  additional-features.md  apiSchema.json  develop.md  java-hook-declaration.md  native-hook-declaration.md  objective-c-hook-declaration.md  output.md  parameter-declaration.md  return-type-declaration.md  usage.md
docs/api/: README.md  frooky-config-definitions-debugproperty.md  frooky-config-definitions-javahook-allof-1-properties-maxframes.md  frooky-config-definitions-javahook-allof-1.md  frooky-config-definitions-javahook.md  frooky-config-definitions-javahookcore-not.md  frooky-config-definitions-javahookcore-properties-class.md  frooky-config-definitions-javahookcore.md  frooky-config-definitions-javamethods-items-properties-name.md  frooky-config-definitions-javamethods-items.md  frooky-config-definitions-javamethods.md  frooky-config-definitions-javaoverloads-items-properties-args-items.md  frooky-config-definitions-javaoverloads-items-properties-args.md  frooky-config-definitions-javaoverloads-items.md  frooky-config-definitions-javaoverloads.md  frooky-config-definitions-nativeargsarray.md  frooky-config-definitions-nativeargumentdescriptor-properties-direction.md  frooky-config-definitions-nativeargumentdescriptor-properties-filter-items.md  frooky-config-definitions-nativeargumentdescriptor-properties-filter.md  frooky-config-definitions-nativeargumentdescriptor-properties-length.md  frooky-config-definitions-nativeargumentdescriptor-properties-lengthinarg.md  frooky-config-definitions-nativeargumentdescriptor-properties-name.md  frooky-config-definitions-nativeargumentdescriptor-properties-returnvalue.md  frooky-config-definitions-nativeargumentdescriptor-properties-type.md  frooky-config-definitions-nativeargumentdescriptor.md  frooky-config-definitions-nativehook-not-anyof-0.md  frooky-config-definitions-nativehook-not-anyof-1.md  frooky-config-definitions-nativehook-not.md  frooky-config-definitions-nativehook-properties-debug.md  frooky-config-definitions-nativehook-properties-filtereventsbystacktrace-items.md  frooky-config-definitions-nativehook-properties-filtereventsbystacktrace.md  frooky-config-definitions-nativehook-properties-module.md  frooky-config-definitions-nativehook-properties-native.md  frooky-config-definitions-nativehook-properties-symbol.md  frooky-config-definitions-nativehook.md  frooky-config-definitions-objchook-not.md  frooky-config-definitions-objchook-properties-debug.md  frooky-config-definitions-objchook-properties-native.md  frooky-config-definitions-objchook-properties-objclass.md  frooky-config-definitions-objchook-properties-symbol.md  (+69 more)
docs/examples/: 01_android.yaml  02_objc.yaml  03_native.yaml  evaluate.sh  (+6 more)
frooky/: .prettierignore  .prettierrc  __init__.py  cli.py  frida_runner.py  pp_hook_event.py  resources.py
tests/: test_cli.py
tests/target-apps/android/basic-native/cpp/: CMakeLists.txt  fundamentalTypes.c  native-lib.cpp  primitives.c  receiveFundamentalReference.c  receiveFundamentalValue.c  receiveString.c  stringTypes.c
(+449 files in other folders)
