[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frooky"
version = "0.1.0"
description = "Frida-powered hook runner with bundled scripts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "cpholguera" }
]
dependencies = [
  "frida>=16.0.0"
]

[project.scripts]
frooky = "frooky.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["frooky*"]

[tool.setuptools.package-data]
frooky = [
  "android/*.js",
  "ios/*.js",
]
