[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "frooky"
dynamic = ["version"]
description = "Frida-powered hook runner based on JSON hook files."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Carlos Holguera", email = "holguera.cybersec@gmail.com" },
  { name = "Stefan Bernhardsgrütter", email = "stefan.bernhardsgruetter@redguard.ch" },
]
keywords = ["mobile", "instrumentation", "pentest", "frida", "hook"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: JavaScript",
  "Topic :: Security",
  "Topic :: Software Development :: Debuggers",
]

dependencies = [
  "frida>=17.6.2",
  "frida-tools>=14.5.1",
]

[project.urls]
Homepage = "https://github.com/cpholguera/frooky"
Repository = "https://github.com/cpholguera/frooky"
"Bug Tracker" = "https://github.com/cpholguera/frooky/issues"

[project.scripts]
frooky = "frooky.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frooky*"]

[tool.setuptools.package-data]
frooky = [
    "agent/dist/*.js",
    "agent/dist/version.json"
]

[tool.setuptools_scm]
version_file = "frooky/_version.py"